# strophae

./: .env.production.example  .env.test  .gitignore  CLAUDE.md  LICENSE  PACKAGING.md  README.md  compose.yaml  electron-builder.yml  package.json  pyproject.toml  tsconfig.json
.github/workflows/: desktop.yml
.specify/: feature.json
.specify/extensions/: .registry
.specify/integrations/: claude.manifest.json  speckit.manifest.json
.specify/memory/: constitution.md
.specify/templates/: tasks-template.md
.specify/workflows/: workflow-registry.json
chat/: admin.py  defaults.py  models.py  urls.py  views.py
chat/migrations/: 0001_initial.py  0002_user_language.py
chat/templatetags/: strophae.py
chat/tests/: test_add_agent_default.py  test_i18n_defaults.py  test_i18n_precedence.py  test_i18n_rendering.py  test_i18n_set_language.py  test_i18n_sidebar.py  test_model_registry.py  test_no_regression.py  test_starter_default.py
config/: settings.py  urls.py
docs/: index.html
packaging/: entitlements.mas.inherit.plist  entitlements.mas.plist  icon.icns
scripts/: bundle.ts  remove-python-layer.sh
specs/001-default-agent-model/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/002-i18n-support/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
src/main/: attachments.ts  ipc.ts  main.ts  store.ts  word-extractor.d.ts
templates/: base.html
tests/: attachments.test.ts  audio.test.ts  fences.test.ts  i18n.test.ts  markdown.test.ts  models.test.ts  openrouter.test.ts  store.test.ts  time.test.ts
(+38 files in other folders)
