[project]
name = "strophae"
version = "0.1.0"
requires-python = ">=3.13"
dependencies = [
    "django>=5.1",
    "psycopg[binary]>=3.2",
    "requests>=2.34.2",
]

[dependency-groups]
dev = [
    "django-stubs>=6.0.6",
    "mypy>=2.1.0",
    "pytest>=8.0",
    "pytest-django>=4.9",
    "ruff>=0.15.20",
]

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "config.settings"
python_files = ["test_*.py", "tests.py"]

[tool.mypy]
python_version = "3.13"
plugins = ["mypy_django_plugin.main"]
check_untyped_defs = true
warn_unused_ignores = true
warn_redundant_casts = true
exclude = ['^chat/migrations/']

[tool.django-stubs]
django_settings_module = "config.settings"
